sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: reassignment to val
      	i=i+1
         ^